compiler/tests/template/fail/invalid_number_length_args.jazz
fn f{k}(reg ptr u64[k] r) -> reg u64 {
  reg u64 res = r[0];
  return res;
}

param int N = 5;

export fn main () -> reg u64 {
  stack u64[N] s;
  inline int i;
  for i = 0 to N {
    s[i] = i;
  }
  reg u64 res = f{1,2}(s); // 2 length arguments instead of 1

  return res;
}
